src/snapshots/tests__tests::test_cnf_formula-2.snap
---
created: "2019-07-19T15:13:31.895298515Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
CnfFormula(
    [
        Literal(
            Proposition(
                LowerWord(
                    "p"
                )
            )
        )
    ]
)
