src/snapshots/tests__tests::test_cnf_formula.snap
---
created: "2019-07-19T15:13:31.879431963Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
CnfFormula(
    [
        Literal(
            Proposition(
                LowerWord(
                    "p"
                )
            )
        )
    ]
)
