src/snapshots/tests__tests::test_comment_block.snap
---
created: "2019-06-11T12:13:10.530234133Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
()
