src/snapshots/tests__tests::test_comment_line.snap
---
created: "2019-06-11T12:13:10.530271690Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
()
