src/snapshots/tests__tests::test_dag_source-2.snap
---
created: "2019-06-11T12:13:10.537594966Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Inference(
    "deduction",
    []
)
