src/snapshots/tests__tests::test_dag_source.snap
---
created: "2019-06-11T12:13:10.530261216Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Name(
    LowerWord(
        "name"
    )
)
