src/snapshots/tests__tests::test_disjunction-3.snap
---
created: "2019-07-19T14:55:34.835926704Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
[
    Literal(
        Proposition(
            LowerWord(
                "p"
            )
        )
    ),
    NegatedLiteral(
        Proposition(
            LowerWord(
                "q"
            )
        )
    ),
    Literal(
        Proposition(
            LowerWord(
                "r"
            )
        )
    )
]
