src/snapshots/tests__tests::test_dollar_word.snap
---
created: "2019-06-11T12:13:10.537966289Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
"$test"
