src/snapshots/tests__tests::test_external_source-2.snap
---
created: "2019-06-11T12:13:10.546560548Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
File(
    "\'file\'",
    Some(
        LowerWord(
            "name"
        )
    )
)
